# tl-creator-contracts

./: .gas-snapshot  .gitignore  .gitmodules  .pre-commit-config.yaml  .soldeerignore  LICENSE  Makefile  README.md  build_init_code.sh  chunk.py  debug.txt  deployments.json  foundry.toml  print_and_clean.sh  pyproject.toml  remappings.txt  sample.env  test.md
.github/workflows/: test.yml
archive/: brownie-config.yaml
archive/contracts/: ERC721TL.sol  TLCoreContractsFactory.sol
archive/tests/: test_ERC721TL.py
contracts/: EIP2981TL.sol  ERC1155TL.sol  ERC712StoryTL.sol  ERC721TL.sol  ERC721UpgradeableTL.sol  IStory.sol
script/: Deploy.s.sol  Deployments.s.sol  OnChainArt.s.sol  Simulate.s.sol
simulations/: erc_7160.py  pyproject.toml
simulations/data/: erc_7160_add_token_uris.csv
src/: ERC1155TL.sol  ERC1155TLProxy.sol  ERC721TL.sol  ERC721TLProxy.sol  TLCoreContractsFactory.sol  TLCoreCreator.sol  TLCoreFactory.sol  TLCreator.sol  TLCreatorContractFactory.sol
src/ERC1155/: ERC1155TL.sol
src/ERC721/: ERC721TL.sol  ERC721UpgradeableTL.sol
src/TRACE/: TRACE.sol  TRACECreator.sol  TRACERSRegistry.sol
src/access/: CoreAuthTL.sol  IERC173.sol  OwnableTL.sol
src/core/: ERC1155TL.sol  (+1 more)
test/: CollectorsChoice.t.sol  Doppelganger.t.sol  ERC1155TL.t.sol  ERC1155TLProxy.t.sol  ERC712TL.t.sol  ERC721TL.t.sol  ERC721TLMProxy.t.sol  ERC721TLProxy.t.sol  OnChainArt.t.sol  Shatter.t.sol  ShatterProxy.t.sol  ShatterV1.t.sol  TLCoreContractFactory.t.sol  TLCreatorContractFactory.t.sol
tests/: test_ERC1155TL.py  test_ERC721StoryTL.py
utils/: chunk.py
(+138 files in other folders)
